# ERP-Prod

./: .gitignore  APPS.md  COMMANDS.md  DEPLOYMENT.md  FBR_TAX_LAYER.md  FBR_TAX_MODULE.md  LOCAL_INSTALLATION.md  README.md  SECURITY.md  install.sh  site_setup.sh  start.sh
p_apps/ledgix_saas/: modules.txt  patches.txt  pyproject.toml
p_apps/ledgix_saas/api/: api.py  business_intelligence.py  dashboard.py  fbr_client.py  fbr_payload.py  fbr_preview.py  fbr_submission.py  maintenance.py  reports.py  stock_ops.py  tax_center.py
p_apps/ledgix_saas/fixtures/: workspace.json
p_apps/ledgix_saas/ledgix_saas.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
p_apps/ledgix_saas/public/css/: ledgix_brand.css  ledgix_navigator.css
p_apps/ledgix_saas/public/js/: ledgix_brand.js  ledgix_navigator.js  ledgix_navigator_config.js
p_apps/ledgix_saas/setup/: permissions.py
p_apps/ledgix_saas/templates/includes/: splash_screen.html
p_apps/ledgix_saas/www/: app.py  login.py
p_apps/millitrix/: README.md  __init__.py  hooks.py  install.py  modules.txt  patches.txt  pyproject.toml  setup.py
p_apps/millitrix/api/: crash_refine_form.py  database_backup.py  lan.py  po_cancellation_form.py  so_cancellation_form.py  user_context.py
p_apps/millitrix/docs/: oracle_parity_audit.json  oracle_parity_audit.md
p_apps/millitrix/finance/: advance_adjustment.py  advance_adjustment_common.py  advance_common.py  closing_adjustment_entry.py  cnb_voucher.py  employee_payment_voucher.py  employee_receipt_voucher.py  gl_opening.py  mill_voucher.py  party_gross_margin.py  payment_by_hawala.py  pnr_discount_common.py  pnr_invoice_common.py  pnr_voucher.py  unsubmit.py  year_end_closing.py
p_apps/millitrix/hr/: employee_payslip.py  pay_salary_increment.py
p_apps/millitrix/millitrix/: __init__.py  hooks.py  install.py  modules.txt  patches.txt
p_apps/millitrix/millitrix/api/: accounts_opening.py  change_password.py  coa_setup.py  gate_pass_form.py  gl_parameter_form.py  invoice_form.py  knockoff.py  lan.py  para_form.py  payslip.py  permissions.py  purchase_invoice_form.py  sales_invoice_form.py  stock.py  unsubmit_form.py  (+1 more)
p_apps/millitrix/patches/: apply_document_naming_and_display.py  apply_number_display_precision.py  apply_todo_remaining_fixes.py  backfill_list_summary_fields.py  blueprint_field_fixes.py  cleanup_production_users.py  clear_millitrix_grid_view_user_settings.py  compact_transaction_forms.py  complete_child_table_list_view.py  configure_parent_list_views.py  ensure_prefixed_autoname_fieldtypes.py  ensure_premium_list_view_settings.py  fix_admin_delete_permissions.py  fix_client_admin_custom_docperms.py  fix_doctype_controller_classes.py  fix_document_id_int_overflow.py  fix_item_price_list_location.py  fix_post_rename_corruption.py  fix_report_module_paths.py  fix_workspace_titles.py  format_party_id_with_dash.py  migrate_gl_statements_layout.py  migrate_lov_values.py  migrate_settings.py  move_bank_accounts_to_bank_grid.py  prefix_millitrix_doctypes.py  remove_combined_reports.py  remove_redundant_fetch_fields.py  rename_doctypes_to_client_names.py  rename_millitrix_reports.py  repair_millitrix_doctype_layout.py  revert_grid_customizations.py  sanitize_administrator_user.py  seed_dev_masters.py  set_all_child_table_columns_one.py  set_child_table_column_width_one.py  set_default_print_formats.py  set_list_view_columns_one.py  setup_lan_hostnames.py  show_all_child_table_grid_fields.py  (+2 more)
p_apps/millitrix/production/: crashing_refine.py
p_apps/millitrix/scripts/: audit_oracle_fmb_parity.py  install_wkhtmltopdf.sh
p_apps/millitrix/stock/: __init__.py  gate_pass.py  stock_adjustment.py  stock_closing.py  stock_closing.py.bak_p0_03  stock_opening.py  stock_opening.py.bak_p0_03  stock_transfer.py
p_apps/millitrix/tests/: test_document_display.py  test_naming.py
p_apps/millitrix/trading/: po_cancellation.py  purchase_invoice.py  purchase_order.py  purchase_other_bill.py  purchase_other_bill_return.py  purchase_return.py  sales_invoice.py  sales_order.py  sales_order_cancellation.py  sales_other_bill.py  sales_other_bill_return.py  sales_return.py
p_apps/millitrix/utils/: advance_pnr.py  bardana_gl.py  bardana_items.py  branding.py  brokery.py  dev_bootstrap.py  doc_transaction.py  doc_transaction.py.bak_p0_04  document_display.py  extended_reports.py  field_normalizers.py  gate_pass_calc.py  gate_pass_form.py  gl_reports.py  host_access.py  invoice_calc.py  item_price.py  knockoff_docs.py  knockoff_flow.py  list_view_plan.py  mill_setting.py  mund.py  order_balance.py  order_calc.py  para_form_launcher.py  party.py  payslip_form.py  pdf_setup.py  po_cancellation_form.py  posting_lock.py  print_pdf.py  production_calc.py  purchase_invoice_form.py  report_columns.py  safety_guard.py  sales_invoice_form.py  stock.py  stock.py.bak_p0_03  stock_adjustment_calc.py  stock_key.py  (+7 more)
(+1265 files in other folders)
